--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -1167,22 +1167,22 @@
     "for index, row in hotel_df.iterrows():\n",
     "    # get latitude, longitude from the DataFrame\n",
     "      lat = row[\"Lat\"]\n",
-    "    lng = row[\"Lng\"]\n",
+    "      lng = row[\"Lng\"]\n",
     "    \n",
     "    # Add filter and bias parameters with the current city's latitude and longitude to the params dictionary\n",
-    "    params[\"filter\"] = # YOUR CODE HERE\n",
-    "    params[\"bias\"] = # YOUR CODE HERE\n",
+    "    params[\"filter\"] = f'circle:{longitude}, {latitude}, {radius}'\n",
+    "    params[\"bias\"] = f'proximity:{longitude}, {latitude}'\n",
     "    \n",
     "    # Set base URL\n",
     "    base_url = \"https://api.geoapify.com/v2/places\"\n",
     "\n",
     "\n",
-    "    # Make and API request using the params dictionaty\n",
+    "    # Make and API request using the params dictionary\n",
     "    name_address =  print(f\"Retrieving results for city: {row['City']}\")\n",
     "    hotel_name = requests.get(base_url, params=params).json()\n",
     "    \n",
     "    # Convert the API response to JSON format\n",
-    "    name_address = # YOUR CODE HERE\n",
+    "    name_address = response.get(base_url).json() \n",
     "    \n",
     "    # Grab the first hotel from the results and store the name in the hotel_df DataFrame\n",
     "    try:\n",
@@ -1339,7 +1339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
