--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -1182,7 +1182,7 @@
     "    hotel_name = requests.get(base_url, params=params).json()\n",
     "    \n",
     "    # Convert the API response to JSON format\n",
-    "    name_address = response.get(base_url).json() \n",
+    "    name_address = response.json() \n",
     "    \n",
     "    # Grab the first hotel from the results and store the name in the hotel_df DataFrame\n",
     "    try:\n",
